2024_04_17 웹소켓 새로운 메시지 구분자 추가